# CogniMesh

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
docker/: api.Dockerfile  nginx-portal.conf  portal.Dockerfile
docs/: AGENTCORE_STUDIO_SETUP.md  AGENT_BUILDER.md  DISTRIBUTION.md  FAQ.md  GETTING_STARTED.md  LINEAGE_CATALOG.md  LOCAL_DEV.md  PIPELINE_E2E_DIAGRAM.md  PIPELINE_PATTERNS_GUIDE.md  PLATFORM_CHECKLIST.md  PLATFORM_OPS.md  PORTAL_DEV.md  PORTAL_UI.md  POSITIONING.md  PRODUCT_ROADMAP.md  PUBLISHING.md  README-business-stewards.md  TOP3_FEATURES.md  TROUBLESHOOTING.md  TUTORIAL_AGENT_DEPLOY.md  TUTORIAL_DRAWIO_EXPORT.md  WELL_ARCHITECTED.md  architecture.md  data-contract-spec.md  drag-drop-pipeline-flow.md  openapi.yaml  vaquar-pattern.md  veridata-integration.md
lib/: access-requests.js  ai-agent-designer.js  ai-pipeline-designer.js  alerting.js  athena-link.js  audit-log.js  auth-production-guard.js  catalog-client.js  execution-history.js  execution-observability.js  lineage-catalog.js  load-env.js  metrics-emf.js  metrics.js  pvdm-run-summary.js  safe-yaml.js  schema-evolution.js  schema-migration.js  tracing-otel.js  tracing.js
portal/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.js  (+1 more)
python/: README.md  pyproject.toml
python/cognimesh/: __init__.py  cli.py  client.py  contract.py
python/tests/: test_contract.py  test_domain_writer.py
(+399 files in other folders)
