[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cognimesh"
version = "0.2.0"
description = "CogniMesh Python SDK - DataContract validation and Vaquar mesh client"
readme = "README.md"
license = "LicenseRef-Proprietary"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Vaquarkhan", email = "security@vaquarkhan.dev" }]
keywords = ["data-mesh", "datacontract", "vaquar", "pvdm", "iceberg"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "pyyaml>=6.0",
  "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[project.scripts]
cognimesh = "cognimesh.cli:main"

[project.urls]
Homepage = "https://github.com/vaquarkhan/CogniMesh"
Documentation = "https://github.com/vaquarkhan/CogniMesh#readme"
Repository = "https://github.com/vaquarkhan/CogniMesh"

[tool.setuptools.packages.find]
where = ["."]
include = ["cognimesh*"]
